bdr.BDR2.scala.error
Compilation error:
BDR2:5: error: ';' expected but ',' found.
      case "R" => droite(),avance()
                          ^BDR2:6: error: ';' expected but ',' found.
      case "L" => gauche(),avance()
                          ^BDR2:7: error: ';' expected but ',' found.
      case "I" => retourne(),avance()
                            ^